# pair-backend-takehome

./: .gitignore  docker-compose.yml  notes.md
app/: .env  Dockerfile  pyproject.toml
app/docker/: entrypoint.sh
app/src/: conf.py  main.py
app/src/api/: __init__.py  health.py
app/src/api/v1/: lessons.py
app/src/app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/src/services/: lessons.py
app/src/utils/: __init__.py  pkg.py
app/tests/: test_lessons_api.py
